--- a/gestionannonce/app/src/main/AndroidManifest.xml
+++ b/gestionannonce/app/src/main/AndroidManifest.xml
@@ -16,11 +16,18 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EditActivity"> </activity>
+        <activity
+            android:name=".EditActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".Logger"
+            android:exported="true"></activity>
+        <activity
+            android:name=".ViewAd"
+            android:exported="true"></activity>
 
     </application>
 
