finished login (without login) todo : edit page

--- a/gestionannonce/app/src/main/AndroidManifest.xml
+++ b/gestionannonce/app/src/main/AndroidManifest.xml
@@ -21,13 +21,18 @@
         </activity>
         <activity
             android:name=".EditActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
+
         <activity
             android:name=".Logger"
-            android:exported="true"></activity>
+            android:exported="true" />
+
         <activity
             android:name=".ViewAd"
-            android:exported="true"></activity>
+            android:exported="true" />
+
+        <activity android:name=".Editor"
+            android:exported="true"/>
 
     </application>
 
